--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,53 @@
 /* Give your page a fun background color */
-
+body {
+  background-color: #8e89bf;
+  margin: 0;
+}
 /* Make the header and footer a different color from the background */
 
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #AED6F1;
+  color: white;
+  text-align: left;
+}
+
+.header {
+  padding: 0px;
+  text-align: center;
+  background: #AED6F1;
+  color: white;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1px;
+}
 /* Align the h1 containing your name in the center of the header*/
 
 /* Make your p tag a different color and italic */
-
+p {
+  font-style: italic;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-size: 16px
+}
 /* Put a border around your image */
+img {
+  border: 5px solid #AED6F1;
+  width: 20%;
+  margin: 20px;
 
+
+}
 /* Change the font-family of your list */
+.block-content {
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.content-facts {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10px;
+}
